# crconv

./: .gitignore  .gitmodules  CMakeLists.txt  vs2015-build.bat
src/: CMakeLists.txt  crconv.c  crconv.h  main.c  version.c  version.h
